# core-hs

./: .gitignore  Makefile  README.md  core-hs.cabal
app/: Main.hs
src/Core/Ch01/: Language.hs  Lexer.x  Parser.y  Prelude.hs  Pretty.hs
src/Core/Ch02/: Addr.hs  Heap.hs  Language.hs  Lexer.x  MultMachine.hs  Parser.y  Prelude.hs  Pretty.hs  README.md  Template.hs  Template1.hs  Types.hs  Utils.hs
src/Core/Ch02/Language/: Expr.hs  Name.hs
src/Core/Ch02/Pretty/: Style.hs  Types.hs  Utils.hs
src/Core/Ch02/Template/: Pretty.hs  Stats.hs  Types.hs
src/Core/Ch02/Template/Pretty/: Style.hs
test/: Test.hs
test/Core/: Ch01Test.hs  Ch02Test.hs  TestUtils.hs
test/Core/Ch02/: ParserTest.hs  PrettyTest.hs  TemplateTest.hs
test/Core/golden/ch02/parser/: app1.core  app1.golden  app2.core  app2.golden  arith3.core  arith3.golden  arith4.core  arith4.golden  arith5.core  arith5.golden  case1.core  case1.golden  case2.core  case2.golden  comb1.core  comb1.golden  fun1.core  fun1.golden  fun2.core  fun2.golden  lamapp1.core  lamapp1.golden  lamapp2.core  lamapp2.golden  let1.core  let1.golden  let2.core  let2.golden  letrec1.core  letrec1.golden  sc1.golden  sclam1.core  sclam1.golden
test/Core/golden/ch02/pretty/: app1.core.ast  app1.core.golden  app2.core.ast  app2.core.golden  arith3.core.ast  arith3.core.golden  arith4.core.ast  arith4.core.golden  arith5.core.ast  arith5.core.golden  case1.core.ast  case1.core.golden  case2.core.ast  case2.core.golden  comb1.core.ast  comb1.core.golden  fun1.core.ast  fun1.core.golden  fun2.core.ast  fun2.core.golden  id.core.ast  id.core.golden  lamapp1.core.ast  lamapp1.core.golden  lamapp2.core.ast  lamapp2.core.golden  let1.core.ast  let1.core.golden  let2.core.ast  let2.core.golden  letrec1.core.ast  letrec1.core.golden  sc1.core.ast  sclam1.core.ast  sclam1.core.golden
test/Core/golden/ch02/template/: ex2_4.golden  ex2_4_x.core  ex2_4_x.golden  ex2_4_z.core  ex2_4_z.golden  ex_2_4_y.core  ex_2_4_y.golden
